@@ -1,3 +1,12 @@
+2018-03-10  Andres Abdo  <andres@andres-ThinkPad-T450s>
+
+	* Web/speax/staticfiles/images/ajax-loading-gif-3.gif:
+	added this loading gif to the images directory inside the staticfiles.
+
+	* Web/speax/speaxapp/templates/speaxapp/simple_upload.html:
+	added a loading spinner to the UI to inform the user that the app is
+	processing after the user clicks the upload button.
+
 2018-03-07  Hanjun Li  <h1212@g.ucla.edu>
 
 	* Web/speax/speaxapp/views.py (simple_upload): incorporated pdf file type
